--- a/js-features/cookie-clicker/task.html
+++ b/js-features/cookie-clicker/task.html
@@ -23,6 +23,9 @@
                 <div class="clicker__status">
                     Всего кликов <span id="clicker__counter">0</span>
                 </div>
+                <div class="clicks-per-second">
+                    Кликов в секунду:<span id="clicks-per-second_span">0</span>
+                </div>
                 <img 
                     src="https://i.postimg.cc/T1bWdf2y/1024px-Pepperidge-Farm-Nantucket-Cookie.jpg" 
                     alt=""
