--- a/client-state/auth/task.html
+++ b/client-state/auth/task.html
@@ -36,6 +36,9 @@
             </div>
             <div class="welcome" id="welcome">
                 Добро пожаловать, пользователь #<span id="user_id"></span>
+                <div class="logout" id="logout">
+                    <button class="btn" id="logout__btn">Выйти</button>
+                </div>
             </div>
         </div>
         </main>
